some files added

--- a/quote.html
+++ b/quote.html
@@ -12,5 +12,8 @@
         <button>Click</button>
     </div>
     <script src="quote.js"></script>
+
+    <br><br><br>
+    <footer>Developed By: Ibrahim Bakori</footer>
 </body>
 </html>
