--- a/quote.html
+++ b/quote.html
@@ -14,6 +14,7 @@
     <script src="quote.js"></script>
 
     <br><br><br>
-    <footer>Developed By: Ibrahim Bakori</footer>
+    <footer>Developed By: Ibrahim Bakori | Powered By: Proxytech Digital Concepts</footer>
+
 </body>
 </html>
